2007-05-02  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpperspectiveclonetool.c
	(gimp_perspective_clone_tool_cursor_update): if we are in adjust
	mode, skip the GimpBrushClass when chaining up. Fixes bug #354933.

2007-05-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scheme-wrapper.c (ts_get_error_msg): applied
	patch from Eric Lamarque that fixes Script-Fu server output
	(bug #431623).

2007-05-02  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/jpeg/jpeg-exif.c: Check if any other IFDs exist before
	rejecting an image's EXIF info. Fixes bug #377917.

2007-05-02  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpsmudge.c (gimp_smudge_start)

	* app/paint/gimpconvolve.c (gimp_convolve_motion): use
	gimp_pickable_get_pixel_at() to get the color to use with
	color_region(). Fixes Smudge and Convolve tools on grayscale images.

2007-05-02  Sven Neumann  <sven@gimp.org>

	* app/core/gimpparamspecs.c (gimp_param_string_validate): the GLib
	version that has string validation fixed is 2.12.12.

2007-05-02  Martin Nordholts  <martinn@svn.gnome.org>

	When adjusting a rectangle it feels unintuitive that the center of
	the rectangle when Ctrl is used lands on the corner that was used
	to resize the rectangle. This commit changes the center of the
	rectangle when Ctrl is used on a already-created rectangle to the
	center of the rectangle when the user starts adjusting the size.

	* app/tools/gimprectangletool.c (struct
	_GimpRectangleToolPrivate): Added center_[xy]_on_fixed_center
	members that keeps track on where the center of the rectangle
	should be when the Ctrl modifier is used.

	* app/tools/gimprectangletool.c: Added convenience function
	gimp_rectangle_tool_get_fixed_center_coords.

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_button_press): Sets the
	center_[xy]_on_fixed_center members depending on whether the button
	press modifies an existing rectangle or creates a new one.

	* app/tools/gimprectangletool.c